Fixed Navbar Collapse

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
 	background-color: white;
 	border-top: none;
 	text-align: center;
-	padding-bottom: 30px;
+	padding-bottom: 10px;
 }
 #subscribe {
 	height: 300px;
